--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.11",
     "nuxt": "^3.15.4",
+    "radix-vue": "^1.9.17",
     "tailwindcss": "^4.0.11",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
