--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vueuse/core": "^12.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-vue": "^8.5.2",
     "lucide-vue-next": "^0.477.0",
     "nuxt": "^3.15.4",
     "reka-ui": "^2.0.2",
