--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@nuxt/content": "^3.3.0",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "tailwindcss": "^3.4.17"
   }
