--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@iconify-json/cib": "^1.2.2",
+    "@iconify-json/lucide": "^1.2.28",
     "@nuxt/content": "^3.3.0",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "tailwindcss": "^3.4.17"
