--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@nuxt/icon": "^1.10.3",
+    "@nuxt/scripts": "^0.11.2",
+    "@nuxtjs/turnstile": "^0.9.15",
     "@vueuse/core": "^12.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
