--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/icon": "^1.10.3",
     "@nuxt/scripts": "^0.11.2",
+    "@nuxthub/core": "^0.8.18",
     "@nuxtjs/turnstile": "^0.9.15",
     "@vueuse/core": "^12.8.2",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +32,7 @@
     "@iconify-json/lucide": "^1.2.28",
     "@nuxt/content": "^3.3.0",
     "@nuxtjs/tailwindcss": "^6.13.1",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "wrangler": "^4.0.0"
   }
 }
